improve contrast for text in blue boxes, fixes az-18

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -10,6 +10,7 @@ $light-gray: #97979b;
 $medium-gray: #525357;
 
 $blue: #659dff;
+$very-pale-blue: #E3E3FF;
 $green: #afcf45;
 $purple: #c64791;
 
